# race_dv_velocity

./: README.md  flow.drawio
gvs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gvs  gvs_plot_check.m  main copy.cpp  main.cpp  motion_blur.py  motion_blur_v1.py
gvs/data_csv/: data_c.csv  data_csv_30.csv  data_csv_45.csv  data_csv_45_new.csv  data_csv_45_t.csv  data_dt.csv  data_fd.csv  data_fd_0.csv  data_fd_30.csv  data_fd_45.csv  data_fd_60.csv  data_feat.csv  data_freq_0.csv  data_freq_1.csv  data_freq_2.csv  data_freq_3.csv  data_freq_noise_sp_2_rot.csv  data_hog.csv  data_hog_0.csv  data_hog_30.csv  data_hog_45.csv  data_hog_60.csv  data_hog_85.csv  data_hog_90.csv  data_hog_tot_30.csv  data_hog_tot_30_blob.csv  data_hog_tot_30_sp.csv  data_hog_tot_45.csv  data_hog_tot_45_blob.csv  data_hog_tot_45_sp.csv  data_hog_tot_60.csv  data_hog_tot_85.csv  data_hog_tot_90.csv  data_lap_30.csv  data_lap_30_blob.csv  data_lap_30_sp.csv  data_lap_45.csv  data_lap_45_350.csv  data_lap_45_700.csv  data_lap_45_blob.csv  (+13 more)
gvs/lib/: dcwc.txt  gvs_dft.cpp  gvs_fd.cpp  gvs_fd.hpp  gvs_utils.cpp  gvs_utils.hpp
gvs_rt/: CMakeLists.txt  Makefile  README.md  gvs_rt  main_rt.cpp
gvs_rt/lib/: gvs_dft.hpp  gvs_fd.cpp  gvs_fd.hpp  gvs_fft.cpp  gvs_fft.hpp  gvs_hog.cpp  gvs_hog.hpp  gvs_lap.cpp  gvs_lap.hpp  gvs_utils.hpp
gvs_rt_test/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  gvs_rt  main_rt.cpp
gvs_rt_test/lib/: gvs_fd.hpp  gvs_fft.cpp  gvs_hog.cpp  gvs_hog.hpp  gvs_lap.hpp  gvs_utils.cpp  gvs_utils.hpp
